welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^SlugHunting:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  leveBrosse()
  ^SlugHunting:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for (i <- 1 to 3)
  ^SlugHunting:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^SlugHunting:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^SlugHunting:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^SlugHunting:21: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  baisseBrosse()
  ^SlugHunting:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return directionCaseVerte
  ^